--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -2,8 +2,8 @@ name: sync upstream
 
 on:
   schedule:
-    # everyday 11AM (UTC)
-    - cron: '* 9 * * *'
+    # every 10 minutes
+    - cron: '*/10 * * * *'
 
 jobs:
   build:
@@ -11,4 +11,12 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
+      - name: Configure git
+        run: |
+          git submodule init
+          git submodule update
+          git config --local user.email "mail@ynojima.net"
+          git config --local user.name "ynojima"
+      - name: Commit & Push
+        run: bin/sync-upstream
