Update pull-request workflow

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -4,7 +4,7 @@ on: pull_request
 
 jobs:
   deploy-ja:
-    name: Deploy
+    name: Deploy Japanese translation to surge.sh
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
@@ -40,7 +40,7 @@ jobs:
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
-            let body = `Site preview: https://pr-preview-${context.runNumber}-i18n-quarkusio.surge.sh`
+            let body = `Site preview(ja): https://pr-preview-${context.runNumber}-ja-i18n-quarkusio.surge.sh`
             github.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
