Translate licecycle.adoc.po

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -31,7 +31,7 @@ jobs:
         run: bin/exec-jekyll
       - name: Deploy to surge
         run: |
-          surge docs pr-preview-"$GITHUB_RUN_NUMBER"-i18n-quarkusio.surge.sh
+          surge docs pr-preview-"$GITHUB_RUN_NUMBER"-ja-i18n-quarkusio.surge.sh
         env:
           SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
           SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
