Add machine-translation job

--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -20,3 +20,12 @@ jobs:
           git config --local user.name "ynojima"
       - name: Commit & Push
         run: bin/sync-upstream
+      - name: Add machine translations
+        run: |
+          wget https://github.com/i18n-quarkusio/quarkus-adoc-po-translator/releases/download/0.5.0.RELEASE/quarkus-adoc-po-translator-runner.jar -o bin/quarkus-adoc-po-translator-runner.jar
+          find i18n/po/jp_JP/_guides/ -name "*.adoc.po" | xargs java -jar bin/quarkus-adoc-po-translator-runner.jar --srcLang=en --dstLang=ja
+          git add i18n
+          git commit -m "Add machine translations"
+          git push origin master
+        env:
+          TRANSLATOR_DEEPL_APIKEY: ${{ secrets.TRANSLATOR_DEEPL_APIKEY }}
