Add workflow dispatch

--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -4,6 +4,9 @@ on:
   schedule:
     # every 10 minutes
     - cron: '*/10 * * * *'
+  workflow_dispatch:
+    branches:
+      - 'master'
 
 jobs:
   build:
@@ -22,8 +25,8 @@ jobs:
         run: bin/sync-upstream
       - name: Add machine translations
         run: |
-          wget https://github.com/i18n-quarkusio/quarkus-adoc-po-translator/releases/download/0.5.0.RELEASE/quarkus-adoc-po-translator-runner.jar -o bin/quarkus-adoc-po-translator-runner.jar
-          find i18n/po/jp_JP/_guides/ -name "*.adoc.po" | xargs java -jar bin/quarkus-adoc-po-translator-runner.jar --srcLang=en --dstLang=ja
+          curl -L https://github.com/i18n-quarkusio/quarkus-adoc-po-translator/releases/download/0.5.0.RELEASE/quarkus-adoc-po-translator-runner.jar -o bin/quarkus-adoc-po-translator-runner.jar
+          find i18n/po/ja_JP/_guides/ -name "*.adoc.po" | xargs java -jar bin/quarkus-adoc-po-translator-runner.jar --srcLang=en --dstLang=ja
           git add i18n
           git commit -m "Add machine translations"
           git push origin master
