--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,9 @@ on:
   schedule:
     # everyday 11AM (UTC)
     - cron: '* 9 * * *'
+  workflow_dispatch:
+    branches:
+      - 'master'
 
 jobs:
   deploy-ja:
