--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -21,14 +21,18 @@ jobs:
           git submodule update
           git config --local user.email "mail@ynojima.net"
           git config --local user.name "ynojima"
-      - name: Commit & Push
+      - name: Sync upstream
         run: bin/sync-upstream
       - name: Add machine translations
         run: |
-          curl -L https://github.com/i18n-quarkusio/quarkus-adoc-po-translator/releases/download/0.5.0.RELEASE/quarkus-adoc-po-translator-runner.jar -o bin/quarkus-adoc-po-translator-runner.jar
-          find i18n/po/ja_JP/_guides/ -name "*.adoc.po" | xargs java -jar bin/quarkus-adoc-po-translator-runner.jar --srcLang=en --dstLang=ja
+          mkdir -p vendor
+          curl -L https://github.com/i18n-quarkusio/quarkus-adoc-po-translator/releases/download/0.5.0.RELEASE/quarkus-adoc-po-translator-runner.jar -o vendor/quarkus-adoc-po-translator-runner.jar
+          find i18n/po/ja_JP/_guides/ -name "*.adoc.po" | xargs java -jar vendor/quarkus-adoc-po-translator-runner.jar --srcLang=en --dstLang=ja
           git add i18n
-          git commit -m "Add machine translations"
-          git push origin master
+          git diff --cached --exit-code --quiet
+          if [[$? -eq 1 ]] ; then
+            git commit -m "Add machine translations"
+            git push origin master
+          fi
         env:
           TRANSLATOR_DEEPL_APIKEY: ${{ secrets.TRANSLATOR_DEEPL_APIKEY }}
