Correct preview permalink

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -31,7 +31,7 @@ jobs:
         run: bin/exec-jekyll
       - name: Deploy to surge
         run: |
-          surge docs pr-preview-"$GITHUB_RUN_NUMBER"-ja-i18n-quarkusio.surge.sh
+          surge docs pr-preview-"$GITHUB_RUN_ID"-ja-i18n-quarkusio.surge.sh
         env:
           SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
           SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
@@ -40,7 +40,7 @@ jobs:
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
-            let body = `Site preview(ja): https://pr-preview-${context.runNumber}-ja-i18n-quarkusio.surge.sh`
+            let body = `Site preview(ja): https://pr-preview-${context.runId}-ja-i18n-quarkusio.surge.sh`
             github.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
