--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -24,16 +24,6 @@ jobs:
       - name: Sync upstream
         run: bin/sync-upstream
       - name: Add machine translations
-        run: |
-          mkdir -p vendor
-          curl -L https://github.com/i18n-quarkusio/quarkus-adoc-po-translator/releases/download/0.5.0.RELEASE/quarkus-adoc-po-translator-runner.jar -o vendor/quarkus-adoc-po-translator-runner.jar
-          find i18n/po/ja_JP/_guides/ -name "*.adoc.po" | xargs java -jar vendor/quarkus-adoc-po-translator-runner.jar --srcLang=en --dstLang=ja
-          find i18n/po/ja_JP/_posts/ -name "*.adoc.po" | xargs java -jar vendor/quarkus-adoc-po-translator-runner.jar --srcLang=en --dstLang=ja
-          git add i18n
-          git diff --cached --exit-code --quiet
-          if [[$? -eq 1 ]] ; then
-            git commit -m "Add machine translations"
-            git push origin master
-          fi
+        run: bin/add-machine-translations
         env:
           TRANSLATOR_DEEPL_APIKEY: ${{ secrets.TRANSLATOR_DEEPL_APIKEY }}
