Add auto updatepo

--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -15,6 +15,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Setup build env
+        run: |
+          sudo apt-get install po4a
       - name: Configure git
         run: |
           git submodule init
@@ -23,6 +26,8 @@ jobs:
           git config --local user.name "ynojima"
       - name: Sync upstream
         run: bin/sync-upstream
+      - name: Exec po4a-updatepo
+        run: bin/exec-po4a-updatepo
       - name: Add machine translations
         run: bin/add-machine-translations
         env:
