Update GitHub Actions workflow to trigger build
when sync-upstream completed

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,13 @@ on:
   workflow_dispatch:
     branches:
       - 'master'
+  workflow_run:
+    workflows:
+      - 'sync-upstream'
+    branches:
+      - 'master'
+    types:
+      - completed
 
 jobs:
   deploy-ja:
