--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -12,12 +12,14 @@ jobs:
   build:
     name: Sync
     runs-on: ubuntu-20.04
+    container: ubuntu:20.10
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Setup build env
         run: |
           sudo apt-get install po4a
+          sudo pip3 install translate-toolkit
       - name: Configure git
         run: |
           git submodule init
@@ -28,6 +30,8 @@ jobs:
         run: bin/sync-upstream
       - name: Exec po4a-updatepo
         run: bin/exec-po4a-updatepo
+      - name: Apply tmx
+        run: bin/apply-tmx
       - name: Add machine translations
         run: bin/add-machine-translations
         env:
