Correct sync-upstream error

--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -18,8 +18,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup build env
         run: |
-          sudo apt-get install po4a
-          sudo pip3 install translate-toolkit
+          apt-get install po4a
+          pip3 install translate-toolkit
       - name: Configure git
         run: |
           git submodule init
