--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup build env
         run: |
+          apt-get update
           apt-get install po4a
           pip3 install translate-toolkit
       - name: Configure git
