Correct sync-upstream error (cont.)

--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup build env
         run: |
           apt-get update
-          apt-get install po4a
+          apt-get -y install po4a
           pip3 install translate-toolkit
       - name: Configure git
         run: |
