--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -12,14 +12,13 @@ jobs:
   build:
     name: Sync
     runs-on: ubuntu-20.04
-    container: ubuntu:20.10
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Setup build env
         run: |
-          apt-get update
-          apt-get -y install po4a python3-pip git
+          sudo apt-get update
+          sudo apt-get -y install po4a python3-pip git
           pip3 install translate-toolkit
       - name: Configure git
         run: |
@@ -30,7 +29,11 @@ jobs:
       - name: Sync upstream
         run: bin/sync-upstream
       - name: Exec po4a-updatepo
-        run: bin/exec-po4a-updatepo
+        uses: docker://ubuntu:20.10
+        run: |
+          apt-get update
+          apt-get -y install po4a
+          bin/exec-po4a-updatepo
       - name: Apply tmx
         run: bin/apply-tmx
       - name: Add machine translations
