Correct sync-upstream (cont.)

--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -30,10 +30,8 @@ jobs:
         run: bin/sync-upstream
       - name: Exec po4a-updatepo
         uses: docker://ubuntu:20.10
-        run: |
-          apt-get update
-          apt-get -y install po4a
-          bin/exec-po4a-updatepo
+        with:
+          args: apt-get update && apt-get -y install po4a && bin/exec-po4a-updatepo
       - name: Apply tmx
         run: bin/apply-tmx
       - name: Add machine translations
