--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Exec po4a-updatepo
         uses: docker://ubuntu:20.10
         with:
-          entrypoint: "bash -c 'apt-get update && apt-get -y install po4a && bin/exec-po4a-updatepo'"
+          entrypoint: /bin/bash -c 'apt-get update && apt-get -y install po4a && bin/exec-po4a-updatepo'
       - name: Apply tmx
         run: bin/apply-tmx
       - name: Add machine translations
