Correct sync-upstream (cont.)

--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -22,6 +22,7 @@ jobs:
           apt-get -y install po4a python3-pip git
           pip3 install translate-toolkit
       - name: Configure git
+        uses: actions/checkout@v2
         run: |
           pwd
           ls -al
