--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -19,6 +19,10 @@ jobs:
           apt-get update
           apt-get -y install po4a python3-pip git
           pip3 install translate-toolkit
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
       - name: Checkout
         uses: actions/checkout@v2
       - name: Configure git
