--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,10 +32,14 @@ jobs:
           key: ${{ runner.os }}-gem-${{ hashFiles('**/Gemfile.lock') }}
           restore-keys: |
             ${{ runner.os }}-gem-
-      - name: Setup build env
+      - name: Configure git
         run: |
           git submodule init
           git submodule update
+          git config --local user.email "mail@ynojima.net"
+          git config --local user.name "ynojima"
+      - name: Setup build env
+        run: |
           sudo apt-get install ruby-dev po4a
           sudo gem install bundler
           sudo npm --global install surge
@@ -56,10 +60,14 @@ jobs:
           key: ${{ runner.os }}-gem-${{ hashFiles('**/Gemfile.lock') }}
           restore-keys: |
             ${{ runner.os }}-gem-
-      - name: Setup build env
+      - name: Configure git
         run: |
           git submodule init
           git submodule update
+          git config --local user.email "mail@ynojima.net"
+          git config --local user.name "ynojima"
+      - name: Setup build env
+        run: |
           sudo apt-get install ruby-dev po4a
           sudo gem install bundler
           sudo npm --global install surge
