--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -7,22 +7,28 @@ jobs:
     name: Deploy Japanese translation to surge.sh
     runs-on: ubuntu-20.04
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
       - name: Cache bundle directory
         uses: actions/cache@v1
         with:
-          path: vendor/bundle
+          path: vendor/bundleb
           key: ${{ runner.os }}-gem-${{ hashFiles('**/Gemfile.lock') }}
           restore-keys: |
             ${{ runner.os }}-gem-
       - name: Setup build env
         run: |
+          apt-get update
+          apt-get -y install po4a python3-pip git ruby-dev po4a
+          pip3 install translate-toolkit
+          gem install bundler
+          npm --global install surge
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Configure git
+        run: |
           git submodule init
           git submodule update
-          sudo apt-get install ruby-dev po4a
-          sudo gem install bundler
-          sudo npm --global install surge
+          git config --local user.email "mail@ynojima.net"
+          git config --local user.name "ynojima"
       - name: Exec po4a-translate
         run: bin/exec-po4a-translate
       - name: Apply override files
