--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Setup build env
         run: |
           apt-get update
-          apt-get -y install po4a python3-pip git ruby-dev po4a
+          apt-get -y install po4a python3-pip git ruby-dev po4a nodejs npm
           pip3 install translate-toolkit
           gem install bundler
           npm --global install surge
