--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -1,9 +1,9 @@
 name: sync-upstream
 
 on:
-  schedule:
-    # every 10 minutes
-    - cron: '*/10 * * * *'
+#  schedule:
+#    # every 10 minutes
+#    - cron: '*/10 * * * *'
   workflow_dispatch:
     branches:
       - 'master'
