--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -25,10 +25,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Configure git
         run: |
-          git submodule init
-          git submodule update
-          git config --local user.email "mail@ynojima.net"
-          git config --local user.name "ynojima"
+          bin/configure-git
+
       - name: Exec po4a-translate
         run: bin/exec-po4a-translate
       - name: Apply override files
