--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,18 +34,19 @@ jobs:
             ${{ runner.os }}-gem-
       - name: Configure git
         run: |
-          git submodule init
-          git submodule update
-          git config --local user.email "mail@ynojima.net"
-          git config --local user.name "ynojima"
+          bin/configure-git
       - name: Setup build env
         run: |
           sudo apt-get install ruby-dev po4a
           sudo gem install bundler
           sudo npm --global install surge
           sudo pip3 install translate-toolkit
-      - name: Build tmx
-        run: bin/build-tmx
+      - name: Update tmx
+        run: bin/update-tmx
+
+      - name: Push changes
+        run: bin/push-changes "Update tmx"
+
 
   deploy-ja:
     name: Deploy Japanese translation to surge.sh
@@ -70,16 +71,17 @@ jobs:
         uses: actions/checkout@v2
       - name: Configure git
         run: |
-          git submodule init
-          git submodule update
-          git config --local user.email "mail@ynojima.net"
-          git config --local user.name "ynojima"
+          bin/configure-git
+
       - name: Exec po4a-translate
         run: bin/exec-po4a-translate
+
       - name: Apply override files
         run: bin/exec-override
+
       - name: Exec jekyll
         run: bin/exec-jekyll
+
       - name: Deploy to surge.sh
         run: |
           surge docs ja-i18n-quarkusio.surge.sh
