Disalbe updatepo for now

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -34,12 +34,12 @@ jobs:
       - name: Push changes
         run: bin/push-changes "Update upstream"
 
-      - name: Exec po4a-updatepo
-        run: |
-          bin/exec-po4a-updatepo
-
-      - name: Push changes
-        run: bin/push-changes "Update .po files"
+#      - name: Exec po4a-updatepo
+#        run: |
+#          bin/exec-po4a-updatepo
+#
+#      - name: Push changes
+#        run: bin/push-changes "Update .po files"
 
       - name: Apply tmx
         run: bin/apply-tmx
