--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -16,11 +16,11 @@ jobs:
             ${{ runner.os }}-gem-
       - name: Setup build env
         run: |
-          apt-get update
-          apt-get -y install po4a python3-pip git ruby-dev po4a nodejs npm
-          pip3 install translate-toolkit
-          gem install bundler
-          npm --global install surge
+          sudo apt-get update
+          sudo apt-get -y install po4a python3-pip git ruby-dev po4a nodejs npm
+          sudo pip3 install translate-toolkit
+          sudo gem install bundler
+          sudo npm --global install surge
       - name: Checkout
         uses: actions/checkout@v2
       - name: Configure git
