--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -12,13 +12,12 @@ jobs:
   build:
     name: Sync
     runs-on: ubuntu-20.04
-    container: ubuntu:20.10
     steps:
       - name: Setup build env
         run: |
-          apt-get update
-          apt-get -y install po4a python3-pip git
-          pip3 install translate-toolkit
+          sudo apt-get update
+          sudo apt-get -y install po4a python3-pip git
+          sudo pip3 install translate-toolkit
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
