--- a/config/l10n-kit.conf
+++ b/config/l10n-kit.conf
@@ -3,3 +3,4 @@ SIMILARITY=99
 TMX_FILE_PATH=$I18N_HOME/i18n/tmx/quarkus.tmx
 GIT_USER_NAME=ynojima
 GIT_USER_EMAIL=mail@ynojima.net
+QUARKUS_ADOC_PO_TRANSLATOR_VERSION=0.5.2.RELEASE
