--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,10 +37,7 @@ jobs:
           bin/configure-git
       - name: Setup build env
         run: |
-          sudo apt-get install ruby-dev po4a
-          sudo gem install bundler
-          sudo npm --global install surge
-          sudo pip3 install translate-toolkit
+          bin/setup-build-env
       - name: Update tmx
         run: bin/update-tmx
 
@@ -55,17 +52,13 @@ jobs:
       - name: Cache bundle directory
         uses: actions/cache@v1
         with:
-          path: vendor/bundleb
+          path: vendor/bundle
           key: ${{ runner.os }}-gem-${{ hashFiles('**/Gemfile.lock') }}
           restore-keys: |
             ${{ runner.os }}-gem-
       - name: Setup build env
         run: |
-          sudo apt-get update
-          sudo apt-get -y install po4a python3-pip git ruby-dev po4a nodejs npm
-          sudo pip3 install translate-toolkit
-          sudo gem install bundler
-          sudo npm --global install surge
+          bin/setup-build-env
       - name: Checkout
         uses: actions/checkout@v2
       - name: Configure git
@@ -83,7 +76,7 @@ jobs:
 
       - name: Deploy to surge.sh
         run: |
-          surge docs ja-i18n-quarkusio.surge.sh
+          surge docs ja-quarkusio.surge.sh
         env:
           SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
           SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
