--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -16,11 +16,7 @@ jobs:
             ${{ runner.os }}-gem-
       - name: Setup build env
         run: |
-          sudo apt-get update
-          sudo apt-get -y install po4a python3-pip git ruby-dev po4a nodejs npm
-          sudo pip3 install translate-toolkit
-          sudo gem install bundler
-          sudo npm --global install surge
+          bin/setup-build-env
       - name: Checkout
         uses: actions/checkout@v2
       - name: Configure git
@@ -35,7 +31,7 @@ jobs:
         run: bin/exec-jekyll
       - name: Deploy to surge
         run: |
-          surge docs pr-preview-"${{ github.event.pull_request.number }}"-ja-i18n-quarkusio.surge.sh
+          surge docs pr-preview-"${{ github.event.pull_request.number }}"-ja-quarkusio.surge.sh
         env:
           SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
           SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
@@ -44,7 +40,7 @@ jobs:
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
-            let body = `Site preview(ja): https://pr-preview-${{ github.event.pull_request.number }}-ja-i18n-quarkusio.surge.sh`
+            let body = `Site preview(ja): https://pr-preview-${{ github.event.pull_request.number }}-ja-quarkusio.surge.sh`
             github.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
