--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -15,9 +15,7 @@ jobs:
     steps:
       - name: Setup build env
         run: |
-          sudo apt-get update
-          sudo apt-get -y install po4a python3-pip git
-          sudo pip3 install translate-toolkit
+          bin/setup-build-env
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
