--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,6 +1,6 @@
 name: pull-request
 
-on: pull_request_target
+on: pull_request
 
 jobs:
   deploy-ja:
@@ -29,21 +29,8 @@ jobs:
         run: bin/exec-override
       - name: Exec jekyll
         run: bin/exec-jekyll
-      - name: Deploy to surge
-        run: |
-          surge docs pr-preview-"${{ github.event.pull_request.number }}"-ja-quarkusio.surge.sh
-        env:
-          SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
-          SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
-      - name: Add comment
-        uses: actions/github-script@v3.1.0
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
         with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
-          script: |
-            let body = `Site preview(ja): https://pr-preview-${{ github.event.pull_request.number }}-ja-quarkusio.surge.sh`
-            github.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: body
-            })
+          name: docs
+          path: docs/
