--- a/.github/workflows/pull-request-feedback.yml
+++ b/.github/workflows/pull-request-feedback.yml
@@ -14,6 +14,8 @@ jobs:
       ${{ github.event.workflow_run.event == 'pull_request' &&
       github.event.workflow_run.conclusion == 'success' }}
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Download artifact
         uses: actions/github-script@v3.1.0
         with:
