--- a/.github/workflows/pull-request-feedback.yml
+++ b/.github/workflows/pull-request-feedback.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           bin/setup-build-env
       - name: Unzip docs
-        run: unzip docs.zip
+        run: unzip docs.zip -d docs
       - name: Deploy to surge
         run: |
           surge docs pr-preview-"${{ github.event.pull_request.number }}"-ja-quarkusio.surge.sh
