--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,14 +1,24 @@
 name: pull-request
 
-on: pull_request
+on: pull_request_target
 
 jobs:
   deploy-ja:
     name: Deploy Japanese translation to surge.sh
     runs-on: ubuntu-20.04
     steps:
-      - name: Checkout
+      # To avoid GitHub Secrets compromise, checkouts merged commit to 'merged' dir and copy its l10n dir to base branch code base
+      - name: Checkout base branch
         uses: actions/checkout@v2
+      - name: Checkout merged commit to 'merged' dir
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+          path: merged
+      - name: Copy l10n dir
+        run: |
+          rm -rf l10n
+          cp -r merged/l10n ./
       - name: Cache bundle directory
         uses: actions/cache@v1
         with:
@@ -29,8 +39,21 @@ jobs:
         run: bin/exec-override
       - name: Exec jekyll
         run: bin/exec-jekyll
-      - name: Upload artifact
-        uses: actions/upload-artifact@v2
+      - name: Deploy to surge
+        run: |
+          surge docs pr-preview-"${{ github.event.pull_request.number }}"-ja-quarkusio.surge.sh
+        env:
+          SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
+          SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
+      - name: Add comment
+        uses: actions/github-script@v3.1.0
         with:
-          name: docs
-          path: docs/
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+            let body = `Site preview(ja): https://pr-preview-${{ github.event.pull_request.number }}-ja-quarkusio.surge.sh`
+            github.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: body
+            })
