--- a/bin/build
+++ b/bin/build
@@ -2,8 +2,8 @@
 set -eu
 
 SCRIPT_DIR=$(cd $(dirname $0); pwd)
-I18N_HOME=$(cd $(dirname $SCRIPT_DIR); pwd)
-cd $I18N_HOME
+L10N_HOME=$(cd $(dirname $SCRIPT_DIR); pwd)
+cd $L10N_HOME
 
 source config/l10n-kit.conf
 
