Add Translation stats

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,11 @@ jobs:
       - name: Push changes
         run: bin/push-changes "Update tmx"
 
+      - name: Update stats
+        run: bin/update-stats
+
+      - name: Push changes
+        run: bin/push-changes "Update stats"
 
   deploy-ja:
     name: Deploy Japanese translation to surge.sh
