--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -38,6 +38,12 @@ jobs:
       - name: Push changes
         run: bin/push-changes "Update .po files"
 
+      - name: Update stats
+        run: bin/update-stats
+
+      - name: Push changes
+        run: bin/push-changes "Update stats"
+
       - name: Apply tmx
         run: bin/apply-tmx
 
