--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -38,11 +38,11 @@ jobs:
       - name: Push changes
         run: bin/push-changes "Update .po files"
 
-      - name: Update stats
-        run: bin/update-stats
+      - name: Update translation stats
+        run: bin/update-translation-stats
 
       - name: Push changes
-        run: bin/push-changes "Update stats"
+        run: bin/push-changes "Update translation stats"
 
       - name: Apply tmx
         run: bin/apply-tmx
