Update build workflow to monitor overridden files update

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,19 @@ jobs:
         run: bin/push-changes "Update translation stats"
 
       - name: Update override stats
-        run: bin/update-override-stats
+        run: |
+          bin/update-override-stats
+
+      - name: Create override files update issue
+        run: |
+          set +e
+          git diff --cached --exit-code --quiet
+
+          if [[ $? -eq 1 ]] ; then
+            set -e
+            gh issue create --title "Upstream files overridden are updated" --body "Uptream files overridden are updated. see [override stats](../l10n/stats/override.csv)"
+          fi
+          set -e
 
       - name: Push changes
         run: bin/push-changes "Update override stats"
