--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Create override files update issue
         run: |
           set +e
-          git diff --cached --exit-code --quiet
+          git diff --exit-code --quiet
 
           if [[ $? -eq 1 ]] ; then
             set -e
