--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,6 +62,8 @@ jobs:
             gh issue create --title "Upstream files overridden are updated" --body "Uptream files overridden are updated. see [override stats](../l10n/stats/override.csv)"
           fi
           set -e
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push changes
         run: bin/push-changes "Update override stats"
