Remove broken link

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,7 +59,7 @@ jobs:
 
           if [[ $? -eq 1 ]] ; then
             set -e
-            gh issue create --title "Upstream files overridden are updated" --body "Uptream files overridden are updated. see [override stats](../l10n/stats/override.csv)"
+            gh issue create --title "Upstream files overridden are updated" --body "Uptream files overridden are updated. see override stats for more details."
           fi
           set -e
         env:
