--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        fetch-depth: 0 # all history (required for getting last modified time of files)
+        with:
+          fetch-depth: 0 # all history (required for getting last modified time of files)
       - name: Cache bundle directory
         uses: actions/cache@v2
         with:
