Update override-check script

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,16 +54,9 @@ jobs:
         run: |
           bin/update-override-stats
 
-      - name: Create override files update issue
+      - name: Create issue if override files updated
         run: |
-          set +e
-          git diff --exit-code --quiet
-
-          if [[ $? -eq 1 ]] ; then
-            set -e
-            gh issue create --title "Upstream files overridden are updated" --body "Uptream files overridden are updated. see override stats for more details."
-          fi
-          set -e
+          .github/steps/create-issue-if-override-files-updated
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
