--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,6 +92,7 @@ jobs:
 
       - name: Deploy to GitHub Pages
         run: |
+          echo "ja.quarkus.io" > docs/CNAME
           git add -f docs
 
           set +e
