Change the default branch from 'master' to 'main'

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: build
 on:
   push:
     branches:
-      - 'master'
+      - 'main'
   schedule:
     # everyday 9AM (UTC)
     - cron: '* 9 * * *'
@@ -12,7 +12,7 @@ on:
     workflows:
       - 'sync-upstream'
     branches:
-      - 'master'
+      - 'main'
     types:
       - completed
 
@@ -52,7 +52,7 @@ jobs:
         run: bin/push-changes "Update tmx"
 
       - name: Update translation stats
-        # Update the translation stats .csv file, which is used as an simplified dashboard ( https://github.com/quarkusio/ja.quarkus.io/blob/master/l10n/stats/translation.csv )
+        # Update the translation stats .csv file, which is used as an simplified dashboard ( https://github.com/quarkusio/ja.quarkus.io/blob/main/l10n/stats/translation.csv )
         run: bin/update-translation-stats
 
       - name: Push changes
